Native/Test/KL/error-no-uni-op.out
error-no-uni-op.kl:9:10: error: no such unary operator -(io S)
